--- a/estilo.css
+++ b/estilo.css
@@ -6,6 +6,13 @@ text-align:center;
 background-color:purple;
 color:white;
 }
+h2
+{
+font-family:'Fredoka One', cursive;
+text-align:center;
+background-color:purple;
+color:blue;
+}
 body
 {
 background-image:url("fondo.jpg");
